<resources>
    <string name="app_name">MeowSo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Confirm Your Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Cat\'s Name</string>
    <string name="prompt_age" />
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid E-mail address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Not a valid Username</string>
    <string name="invalid_confirmation_password">Password and confirmation password do not match</string>
    <string name="email_unavailable">Your email is already registered</string>
    <string name="username_unavailable">Username is not available</string>

    <string name="login_failed">"Login failed"</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_explore">Explore</string>
    <string name="navigation_upload">Upload</string>
    <string name="navigation_notification">Notification</string>
    <string name="navigation_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_following">Following</string>
    <string name="label_followers">Followers</string>
    <string name="label_posts">Posts</string>
    <string name="btn_follow_text">Follow</string>
    <string name="btn_message_text">Message</string>
    <string name="dumy_user_detail_following_followers">1200</string>
    <string name="dummy_fullname">Fahmi Sulaiman Baswedan</string>
    <string name="opt_logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="action_next">Next</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>