<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black"
        android:title="@string/navigation_home" />
    <item
        android:id="@+id/nav_explore"
        android:enabled="true"
        android:icon="@drawable/ic_explore_black"
        android:title="@string/navigation_explore" />

    <item
        android:id="@+id/nav_upload"
        android:enabled="true"
        android:icon="@drawable/ic_add_black"
        android:title="@string/navigation_upload" />

    <item
        android:id="@+id/nav_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black"
        android:title="@string/navigation_notification" />

    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black"
        android:title="@string/navigation_profile" />
</menu>