<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_profile"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tv_display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:gravity="center"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_picture"
        tools:text="@string/dummy_fullname" />

    <GridLayout
        android:id="@+id/grid_profile_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:columnCount="3"
        android:rowCount="1"
        android:useDefaultMargins="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_display_name">


        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_following"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="@string/dumy_user_detail_following_followers" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_followers"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="@string/dumy_user_detail_following_followers" />
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_posts"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_posts_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="@string/dumy_user_detail_following_followers" />
        </LinearLayout>

    </GridLayout>


    <Button
        android:id="@+id/btn_message"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_size_medium"
        android:text="@string/edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid_profile_info" />
</androidx.constraintlayout.widget.ConstraintLayout>